[gd_scene load_steps=5 format=3 uid="uid://170r7ggxsapx"]

[ext_resource type="Texture2D" uid="uid://gkiifoevfe7p" path="res://images/circle.png" id="1"]
[ext_resource type="Script" path="res://src/TemplateNode.gd" id="2"]
[ext_resource type="Resource" path="res://resources/Nodes/node_settings.tres" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 18.0

[node name="BaseNode" type="Node2D"]
script = ExtResource("2")
nodeSettings = ExtResource("3")

[node name="Visual" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visual"]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="Visual"]
scale = Vector2(0.11, 0.11)
texture = ExtResource("1")

[node name="Information" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 2

[node name="LabelName" type="Label" parent="Information"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
text = "Node name"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Visual" to="." method="_on_Visual_mouse_entered"]
[connection signal="mouse_exited" from="Visual" to="." method="_on_Visual_mouse_exited"]
